--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,17 @@ services:
     volumes:
       - ./src:/usr/src/app/src
     ports:
-      - 8080:80
+      - ${BINOTIFY_REST_SERVICE_APP_PORT:-8080}:${BINOTIFY_REST_SERVICE_APP_PORT:-8080}
 
   binotify-rest-service-db:
     image: mysql:latest
     restart: always
     ports:
-      - 13306:3306
+      - ${BINOTIFY_REST_SERVICE_DB_PORT:-13306}:3306
     environment:
-      MYSQL_DATABASE: "database"
-      MYSQL_USER: "user"
-      MYSQL_PASSWORD: "password"
-      MYSQL_ROOT_PASSWORD: "password"
+      MYSQL_DATABASE: "${BINOTIFY_REST_SERVICE_DB_NAME:-database}"
+      MYSQL_USER: "${BINOTIFY_REST_SERVICE_DB_USER:-user}"
+      MYSQL_PASSWORD: "{BINOTIFY_REST_SERVICE_DB_PASSWORD:-password}"
+      MYSQL_ROOT_PASSWORD: "{BINOTIFY_REST_SERVICE_DB_ROOT_PASSWORD:-password}"
     volumes:
       - ./database.sql:/docker-entrypoint-initdb.d/database.sql
