--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-BINOTIFY_APP_WEB_PORT=
+BINOTIFY_REST_SERVICE_APP_PORT=
 BINOTIFY_REST_SERVICE_DB_PORT=
 BINOTIFY_REST_SERVICE_DB_NAME=
 BINOTIFY_REST_SERVICE_DB_USER=
