chore: set up database

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 BINOTIFY_REST_SERVICE_APP_PORT=
+BINOTIFY_REST_SERVICE_DB_HOST=
 BINOTIFY_REST_SERVICE_DB_PORT=
 BINOTIFY_REST_SERVICE_DB_NAME=
 BINOTIFY_REST_SERVICE_DB_USER=
