--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - ./src:/usr/src/app/src
     ports:
       - ${BINOTIFY_REST_SERVICE_APP_PORT:-8080}:${BINOTIFY_REST_SERVICE_APP_PORT:-8080}
+    depends_on:
+      binotify-rest-service-db:
+        condition: service_healthy
 
   binotify-rest-service-db:
     image: mysql:latest
@@ -20,3 +23,9 @@ services:
       MYSQL_ROOT_PASSWORD: "${BINOTIFY_REST_SERVICE_DB_ROOT_PASSWORD:-password}"
     volumes:
       - ./database.sql:/docker-entrypoint-initdb.d/database.sql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 30s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
