feat: add auth middleware

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ BINOTIFY_REST_SERVICE_DB_NAME=
 BINOTIFY_REST_SERVICE_DB_USER=
 BINOTIFY_REST_SERVICE_DB_PASSWORD=
 BINOTIFY_REST_SERVICE_DB_ROOT_PASSWORD=
+ACCESS_TOKEN_SECRET=
+PW_HASH_TYPE=
