--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mysql2": "github:types/mysql2",
