--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "redis": "^4.5.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
